Fixed horizontal overflow caused by page-container

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 #page-container {
   position: relative;
   min-height: 100vh;
+  max-width: 90vw;
 }
 
 #content {
